<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_character">Characters</string>
    <string name="title_location">Locations</string>
    <string name="title_episode">Episodes</string>
    <string name="title_character_details">Character Details</string>
    <string name="title_location_details">Location Details</string>
    <string name="title_episode_details">Edpisode Details</string>
    <string name="character_adapter_name">Name: %1$s</string>
    <string name="character_adapter_species">Species: %1$s</string>
    <string name="character_adapter_status">Status: %1$s</string>
    <string name="character_adapter_gender">Gender: %1$s</string>
    <string name="location_adapter_name">Name: %1$s</string>
    <string name="location_adapter_type">Type: %1$s</string>
    <string name="location_adapter_dimension">Dimension: %1$s</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="female">Female</string>
    <string name="genderless">Genderless</string>
    <string name="male">Male</string>
    <string name="alive">Alive</string>
    <string name="apply">Apply</string>
    <string name="title_character_filter">Character Filter</string>
    <string name="search">Search</string>
    <string name="dimension">Dimension</string>
    <string name="episode">Episode</string>
    <string name="title_episode_filter">Episode Filters</string>
    <string name="title_location_filter">Location Filter</string>
    <string-array name="character_spinner_status">
        <item>Choose status</item>
        <item>Alive</item>
        <item>Dead</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="character_spinner_gender">
        <item>Choose gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Genderless</item>
        <item>Unknown</item>
    </string-array>
</resources>