<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_character">

    <fragment
        android:id="@+id/navigation_character"
        android:name="com.example.rickandmorty.sections.character.FragmentCharacter"
        android:label="@string/title_character"
        tools:layout="@layout/fragment_character">
        <action
            android:id="@+id/action_navigation_character_to_navigation_character_details"
            app:destination="@id/navigation_character_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_character_details"
        android:name="com.example.rickandmorty.sections.character.FragmentCharacterDetails"
        android:label="@string/title_character_details"
        tools:layout="@layout/fragment_character_details" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.rickandmorty.sections.location.FragmentLocation"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location">
        <action
            android:id="@+id/action_navigation_location_to_navigation_location_details"
            app:destination="@id/navigation_location_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_location_details"
        android:name="com.example.rickandmorty.sections.location.FragmentLocationDetails"
        android:label="@string/title_location_details"
        tools:layout="@layout/fragment_location_details" />

    <fragment
        android:id="@+id/navigation_episode"
        android:name="com.example.rickandmorty.sections.episode.FragmentEpisode"
        android:label="@string/title_episode"
        tools:layout="@layout/fragment_episode">
        <action
            android:id="@+id/action_navigation_episode_to_navigation_episode_details"
            app:destination="@id/navigation_episode_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_episode_details"
        android:name="com.example.rickandmorty.sections.episode.FragmentEpisodeDetails"
        android:label="@string/title_episode_details"
        tools:layout="@layout/fragment_episode_details" />

</navigation>