<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_episode_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey">

        <ImageButton
            android:id="@+id/button_episode_filter_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/episode_filter_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/name"
        app:hintTextColor="@color/white">

        <EditText
            android:id="@+id/episode_filter_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/episode_filter_input_episode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/species"
        app:hintTextColor="@color/white">

        <EditText
            android:id="@+id/episode_filter_edit_episode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:hint="@string/episode"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/episode_filter_button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/basic"
        android:text="@string/apply"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>